--- a/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
+++ b/src/app/modules/contests/pages/contest/contest-og-image/contest-og-image.component.html
@@ -2,7 +2,7 @@
   <div class="card text-center bg-contest" #screen>
     <a class="card-header">
       <div class="logo text-left d-flex">
-        <img src="assets/images/logo/logo.svg" height="32" alt="">
+        <img src="assets/images/logo/logo.png" height="32" alt="">
         <h5 class="ml-75 text-white mt-50 mb-2">CPython.uz</h5>
       </div>
 
