--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
     <div class="navbar-container">
       <div class="inner">
         <div class="navbar-left" [@fadeInLeft]="startAnimationState">
-          <img height="32" src="assets/images/logo/logo-with-title.png" alt="logo">
+          <img height="32" src="assets/images/logo/logo.png" alt="logo">
           <h2 class="font-weight-bolder text-primary ml-1">{{ appName }}</h2>
         </div>
 
