[REFACTORING] menu-item component

--- a/src/core/components/core-menu/vertical/item/item.component.html
+++ b/src/core/components/core-menu/vertical/item/item.component.html
@@ -32,7 +32,7 @@
     >
       {{ item.badge.title }}
     </span>
-    <span *ngIf="item.newEventsCount" style="transition: 0.5s ease;" class="badge ml-25 mb-1 new-events badge-pill badge-primary badge-glow">
+    <span *ngIf="item.newEventsCount" style="transition: 0.5s ease;" class="badge ml-1 new-events badge-pill badge-primary badge-glow">
       {{ item.newEventsCount }}
     </span>
   </ng-template>
