--- a/src/app/modules/testing/testing.component.html
+++ b/src/app/modules/testing/testing.component.html
@@ -1,34 +1,38 @@
-<div class="row">
-  <div class="col-12 mt-2 tests-page-top">
-    <swiper [config]="testsSwiperConfig" class="swiper-tests">
-      <div class="swiper-slide" *ngFor="let test of lastTests">
-        <test-card [test]="test"></test-card>
+<div class="content-wrapper container-xxl container-xxl p-0">
+  <div class="content-body">
+    <div class="row">
+      <div class="col-12 mt-2 tests-page-top">
+        <swiper [config]="testsSwiperConfig" class="swiper-tests">
+          <div class="swiper-slide" *ngFor="let test of lastTests">
+            <test-card [test]="test"></test-card>
+          </div>
+        </swiper>
       </div>
-    </swiper>
-  </div>
-  
-  <div class="col-lg-10 offset-lg-1 col-12 offset-0">
-    <div class="chapters">
-      <swiper [config]="chaptersSwiperConfig" class="swiper-chapters swiper-lazy-loading">
-        <div class="swiper-slide" *ngFor="let chapter of chapters">
-          <div class="chapter-card" [ngClass]="{'active': chapter.id == selectedChapter}">
-            <chapter-card (click)="selectedChapter=chapter.id;loadTests()" [chapter]="chapter"></chapter-card>
+
+      <div class="col-lg-10 offset-lg-1 col-12 offset-0">
+        <div class="chapters">
+          <swiper [config]="chaptersSwiperConfig" class="swiper-chapters swiper-lazy-loading">
+            <div class="swiper-slide" *ngFor="let chapter of chapters">
+              <div class="chapter-card" [ngClass]="{'active': chapter.id == selectedChapter}">
+                <chapter-card (click)="selectedChapter=chapter.id;loadTests()" [chapter]="chapter"></chapter-card>
+              </div>
+            </div>
+          </swiper>
+        </div>
+
+        <div class="tests-list">
+          <div class="row">
+            <div class="col-10 offset-1" *ngFor="let test of tests">
+              <test-list-card [test]="test"></test-list-card>
+            </div>
+          </div>
+
+          <div class="text-center">
+            <button *ngIf="!isLastPage" (click)="moreLoad()" class="btn btn-relief-primary">
+              {{ 'More' | translate }}
+            </button>
           </div>
         </div>
-      </swiper>
-    </div>
-
-    <div class="tests-list">
-      <div class="row">
-        <div class="col-10 offset-1" *ngFor="let test of tests">
-          <test-list-card [test]="test"></test-list-card>
-        </div>
-      </div>
-
-      <div class="text-center">
-        <button *ngIf="!isLastPage" (click)="moreLoad()" class="btn btn-relief-primary">
-          {{ 'More' | translate }}
-        </button>
       </div>
     </div>
   </div>
