[CHANGE] bg-color

--- a/src/app/modules/home/header-section/header-section.component.scss
+++ b/src/app/modules/home/header-section/header-section.component.scss
@@ -30,7 +30,7 @@ header {
   & > svg {
     position: absolute;
     bottom: 0;
-    stroke: #f8f8f8;
+    stroke: #f5f8fa;
     width: 100%;
     height: auto;
   }
