--- a/src/app/modules/home/statistics-section/statistics-section.component.scss
+++ b/src/app/modules/home/statistics-section/statistics-section.component.scss
@@ -22,7 +22,7 @@
     bottom: 0;
     width: 100%;
     height: auto;
-    stroke: #f8f8f8;
+    stroke: #f5f8fa;
   }
 
   @include media-breakpoint-down(lg) {
