--- a/src/app/modules/projects/project/project.component.scss
+++ b/src/app/modules/projects/project/project.component.scss
@@ -35,7 +35,7 @@
   & > svg {
     position: absolute;
     bottom: 0;
-    // stroke: #f8f8f8;
+    // stroke: #f5f8fa;
     fill: #fff;
     width: 100%;
     height: auto;
