--- a/src/core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/core/scss/base/bootstrap-extended/_variables.scss
@@ -92,7 +92,7 @@ $spacers: map-merge(
 // Body
 //
 // Settings for the `<body>` element.
-$body-bg: #f8f8f8 !default;
+$body-bg: #f5f8fa !default;
 $body-color: #6e6b7b !default;
 
 // Links
