--- a/src/core/scss/base/components/_variables.scss
+++ b/src/core/scss/base/components/_variables.scss
@@ -97,7 +97,7 @@ $blank-bg-color: #eff2f7 !default;
 //  Data Tables Bg Color
 //  -------------------------------
 
-$datatable-bg-color: #f8f8f8 !default;
+$datatable-bg-color: #f5f8fa !default;
 
 //  -------------------------------
 //  Switch
