[BUG FIX] menu translate

--- a/src/core/components/core-menu/vertical/item/item.component.html
+++ b/src/core/components/core-menu/vertical/item/item.component.html
@@ -23,11 +23,11 @@
 
   <ng-template #itemContent>
     <span [data-feather]="item.icon" *ngIf="item.icon"></span>
-    <span class="menu-title text-truncate" [translate]="item.translate">{{ item.title }}</span>
+    <span class="menu-title text-truncate">{{ item.translate | translate }}</span>
     <span
       class="badge ml-auto mr-1"
       *ngIf="item.badge"
-      [translate]="item.badge.translate"
+      font-weight: 400="item.badge.translate"
       [ngClass]="item.badge.classes"
     >
       {{ item.badge.title }}
