--- a/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
+++ b/src/core/components/core-menu/horizontal/collapsible/collapsible.component.html
@@ -12,7 +12,7 @@
   <!-- itemContent template -->
   <ng-template #itemContent>
     <span [data-feather]="item.icon" *ngIf="item.icon"></span>
-    <span [translate]="item.translate">{{ item.title }}</span>
+    <span>{{ item.translate | translate }}</span>
     <span *ngIf="item.hasNewEvent" class="badge ml-25 badge-yellow badge-pill badge-glow">New</span>
   </ng-template>
 
