--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -222,3 +222,9 @@ pre {
     max-width: 1440px;
   }
 }
+
+#main-menu-navigation > li[core-menu-horizontal-item], li[core-menu-horizontal-collapsible] {
+  &.active > a > keenicon > span {
+    color: white !important;
+  }
+}
