[CHANGE] theme dark-color

--- a/src/core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/core/scss/base/bootstrap-extended/_variables.scss
@@ -26,7 +26,7 @@ $secondary: #82868b !default;
 $info: $blue !default;
 $warning: $orange !default;
 $light: $gray-50 !default;
-$dark: #4b4b4b !default;
+$dark: #071437 !default;
 
 // Spacing
 //
