--- a/src/app/modules/problems/components/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.html
@@ -95,11 +95,11 @@
 </ng-container>
 
 <ng-container *ngIf="problem.comment?.length > 0">
-  <h4 class="mt-3 text-dark">
+  <h4 class="mt-3 font-medium-4 text-dark">
     {{ 'COMMENT' | translate }}:
   </h4>
 
-  <mathjax class="mt-2 font-medium-4 text-dark text-dark" [content]="problem.comment"></mathjax>
+  <mathjax class="mt-2 text-dark" [content]="problem.comment"></mathjax>
   <hr>
 </ng-container>
 
