[REFACTORING] cf badge

--- a/src/app/modules/users/pages/user-profile/user-profile.component.html
+++ b/src/app/modules/users/pages/user-profile/user-profile.component.html
@@ -165,7 +165,7 @@
                       <span class="badge badge-glow badge-warning">
                         {{ userSocial.codeforcesHandle }}
                       </span>
-                      <img class="ml-1" src="https://cp-logo.vercel.app/codeforces/{{ userSocial.codeforcesHandle }}">
+                      <img class="ml-1" [src]="userSocial.codeforcesBadge">
                     </p>
                   </a>
                 </div>
