--- a/src/app/modules/contests/pages/user-contests/contest-create/contest-create.component.html
+++ b/src/app/modules/contests/pages/user-contests/contest-create/contest-create.component.html
@@ -56,7 +56,7 @@
             <div class="card-body">
 
               <div class="form-group">
-                <label class="text-primary" for="first-name-vertical">
+                <label class="text-primary">
                   <strong>
                     {{ 'TITLE' | translate }}:
                   </strong>
@@ -71,7 +71,7 @@
               </div>
 
               <div class="form-group">
-                <label class="text-primary" for="first-name-vertical">
+                <label class="text-primary">
                   <strong>
                     {{ 'CONTESTS.START_TIME' | translate }}:
                   </strong>
@@ -93,7 +93,7 @@
               </div>
 
               <div class="form-group">
-                <label class="text-primary" for="first-name-vertical">
+                <label class="text-primary">
                   <strong>
                     {{ 'CONTESTS.FINISH_TIME' | translate }}:
                   </strong>
@@ -115,7 +115,7 @@
               </div>
 
               <div class="form-group">
-                <label class="text-primary" for="first-name-vertical">
+                <label class="text-primary">
                   <strong>
                     {{ 'CONTESTS.TYPE' | translate }}:
                   </strong>
