--- a/src/core/components/core-menu/horizontal/item/item.component.html
+++ b/src/core/components/core-menu/horizontal/item/item.component.html
@@ -22,7 +22,7 @@
   </a>
 
   <ng-template #itemContent>
-    <keenicon class="font-medium-4 text-primary mr-50" type="duotone" [name]="item.icon"></keenicon>
+    <kep-icon class="font-medium-4 text-primary mr-50" type="duotone" [name]="item.icon"></kep-icon>
     <span>{{ item.translate | translate }}</span>
     <span *ngIf="item.newEventsCount" class="badge ml-25 new-events-count badge-pill badge-primary badge-glow">
       {{ item.newEventsCount }}
