--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -3,7 +3,7 @@
        class="avatar avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
     <a class="text-white">
       <div class="avatar-content">
-        <i [data-feather]="'problem' | iconName" class="font-large-1"></i>
+        <kep-icon type="solid" name="problem"></kep-icon>
       </div>
     </a>
   </div>
@@ -13,15 +13,15 @@
 
   <div [@fadeInUpOnEnter] class="mt-2">
     <a routerLink="rating" class="btn btn-primary mr-md-1 mr-25">
-      <i [data-feather]="'rating' | iconName"></i>
+      <kep-icon name="rating"></kep-icon>
       {{ 'Rating' | translate }}
     </a>
     <a routerLink="profile" class="btn btn-primary mr-md-1 mr-25">
-      <i [data-feather]="'user' | iconName"></i>
+      <kep-icon name="profile"></kep-icon>
       {{ 'Profile' | translate }}
     </a>
     <a routerLink="attempts" class="btn btn-primary">
-      <i [data-feather]="'attempt' | iconName"></i>
+      <kep-icon name="attempt"></kep-icon>
       {{ 'Attempts' | translate }}
     </a>
   </div>
